[package]
name = "rust-echo"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.80"
tokio = { version = "1", features = ["full"] }
tokio-serde = { version = "0.9", features = ["json", "cbor"] }
tokio-util = { version = "0.7", features = ["codec"] } 
tracing = "0.1.40"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1.0", features = ["derive"] }
serde_cbor = "0.11"
serde_json = "1.0.114"
futures = "0.3.30"
clap = { version = "4.5.7", features = ["derive"] }

